# homework-williamoneil

./: .gitignore  Dockerfile  README.md  docker-compose.yml  plan.md  pyproject.toml  xuqiu.txt
data/: mock_trades.json
src/: __init__.py  main.py
src/core/: __init__.py  concurrent_processor.py  processor.py  subscriber_manager.py
src/data_source/: __init__.py  mock_source.py
src/models/: __init__.py  result.py  trade.py
src/strategies/: __init__.py  base.py  price_limit.py  volume_check.py
src/subscribers/: __init__.py  base.py  monitor_subscriber.py  risk_subscriber.py
src/utils/: __init__.py  logger.py  pool.py
tests/: __init__.py  conftest.py  test_benchmark.py  test_concurrent.py  test_integration.py  test_pool.py  test_processor.py  test_rule_engine.py  test_subscriber.py
